debathena-firefox-wrapper (10.0.3) unstable; urgency=low

  * Punt Debian version component; we are no longer treating wrapper
    scripts as portable software.

 -- Greg Hudson <ghudson@mit.edu>  Tue, 03 Jun 2008 12:44:08 -0400

debathena-firefox-wrapper (10.0.2-0debathena1) unstable; urgency=low

  * Handle a profile directory name containing whitespace, when
  parsing the contents of the lock symlink.

 -- Robert Basch <rbasch@mit.edu>  Fri, 09 May 2008 17:30:11 -0400

debathena-firefox-wrapper (10.0.1-0debathena3) unstable; urgency=low

  * Fix missing DEB_DIVERT_EXTENSION.

 -- Tim Abbott <tabbott@mit.edu>  Tue, 29 Apr 2008 23:28:29 -0400

debathena-firefox-wrapper (10.0.1-0debathena2) unstable; urgency=low

  * Convert to use new config-package-dev interfaces.

 -- Tim Abbott <tabbott@mit.edu>  Tue, 22 Apr 2008 03:48:38 -0400

debathena-firefox-wrapper (10.0.1-0debathena1) unstable; urgency=low

  * firefox.sh: Fix typo in test for distribution.
  * debian/rules: remove unecessary lsb_release code, now that the
  relevant distribution test is in firefox.sh.
  * debian/control.in: move lsb_release from build-depends to depends.

 -- Tim Abbott <tabbott@mit.edu>  Mon, 17 Mar 2008 21:08:26 -0400

debathena-firefox-wrapper (10.0.0-0debathena1) unstable; urgency=low

  * Patches folded into main source.

 -- Greg Hudson <ghudson@equal-rites.mit.edu>  Fri, 07 Mar 2008 11:02:08 -0500

debathena-firefox-wrapper (9.4.39+cvs20070623-0debathena1) unstable; urgency=low

  * Initial release.

 -- Anders Kaseorg <andersk@mit.edu>  Sat, 08 Sep 2007 18:22:52 -0400