@@ -1,7 +1,0 @@
-dnl Process this file with autoconf to produce a configure script.
-AC_INIT(firefox.sh)
-
-AC_PROG_CC
-AC_PROG_INSTALL
-
-AC_OUTPUT(Makefile)
