@@ -9,9 +9,10 @@ DEB_DIVERT_FILES_debathena-firefox-wrapper += \
 	/usr/bin/iceweasel.debathena
 
 include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
+include /usr/share/cdbs/1/class/makefile.mk
 include /usr/share/cdbs/1/rules/config-package.mk
 
+DEB_MAKE_INSTALL_TARGET = install DESTDIR=$(DEB_DESTDIR)
 DEB_DH_LINK_ARGS += usr/bin/firefox.debathena usr/bin/iceweasel.debathena
 
 clean::
